# ocapito

./: LICENSE  README.md
battleship/: .gitmodules  CMakePresets.txt  README.md  battleship.code-workspace
battleship/gui/: CMakeLists.txt
battleship/gui/src/: Application.cpp  Application.h  UiBoard.cpp  UiBoard.h  logo.c  main.cpp
battleship/interfaces/: IBoard.h  IBoardVisitor.h  IGame.h
battleship/src/: Board.cpp  Board.h  Boat.cpp  Boat.h  Fleet.cpp  Fleet.h  Game.cpp  Game.h  NetGame.h  Player.cpp  Player.h  Point.cpp  Point.h  Random.h  Tile.cpp  Tile.h
battleship/tui/: CMakeLists.txt  main.cpp
